--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         sudo git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-eabi-4.6 /opt/toolchains/arm-eabi-4.6/
     - name: Building Kernel
       run: |
-        export CROSS_COMPILE=/opt/toolchains/arm-eabi-4.6/bin/arm-eabi-;
+        export CROSS_COMPILE=/opt/toolchains/arm-eabi-4.6/bin/arm-eabi-gcc
         export ARCH=arm;
         export KBUILD_BUILD_USER=notnoelchannel
         export KBUILD_BUILD_HOST=retardedmachine
@@ -27,15 +27,8 @@ jobs:
       run: |
         mkdir -p /home/runner/work/output
         cp arch/arm/boot/zImage /home/runner/work/output/zImage
-        find . -name "*.ko" -exec cp {} /home/runner/work/output/ \;
     - name: Uploading Output
       uses: actions/upload-artifact@v2
       with:
         name: zImage
         path: /home/runner/work/output/zImage
-
-    - name: Uploading Modules
-      uses: actions/upload-artifact@v2
-      with:
-        name: modules
-        path: /home/runner/work/output/*.ko
